--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <jstl.version>1.2</jstl.version>
         <junit.jupiter.version>5.0.1</junit.jupiter.version>
         <junit.platform.version>1.0.3</junit.platform.version>
+        <spring.jdbc.version>5.0.5.RELEASE</spring.jdbc.version>
+        <postgresql.jdbc.version>42.2.2</postgresql.jdbc.version>
     </properties>
 
     <dependencies>
@@ -44,6 +46,12 @@
             <artifactId>junit-jupiter-engine</artifactId>
             <version>${junit.jupiter.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <!-- Only using ScriptUtils class. -->
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>${spring.jdbc.version}</version>
         </dependency>
     </dependencies>
 
