--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,12 @@
         <spring.jdbc.version>5.0.5.RELEASE</spring.jdbc.version>
         <postgresql.jdbc.version>42.2.2</postgresql.jdbc.version>
     </properties>
-
     <dependencies>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.5</version>
+        </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
